Fix image stretching

--- a/styles/global.css
+++ b/styles/global.css
@@ -191,5 +191,5 @@ body {
 
 .fit {
     max-width: 100%;
-    max-height: 100%;
+    object-fit: contain;
 }
